fixing color contrast in other places

--- a/_assets/stylesheets/layouts/_footer.scss
+++ b/_assets/stylesheets/layouts/_footer.scss
@@ -9,7 +9,7 @@
   border-top: 1px solid $base-border-color;
   p {
     font-size: 12px;
-    color: $gray-light;
+    color: $gray-less-dark;
   }
   a {
     text-decoration: none;
