--- a/_assets/stylesheets/modules/_articles.scss
+++ b/_assets/stylesheets/modules/_articles.scss
@@ -30,7 +30,7 @@
         font-size: 11px;
         font-weight: 600;
         letter-spacing: .1em;
-        color: $gray;
+        color: $gray-less-dark;
         text-decoration: none;
         text-transform: uppercase;
         transition: color $base-transition-speed linear;
